@@ -1,3 +1,7 @@
+2008-09-25  Michael Stucki  <michael@typo3.org>
+
+	* Fixed bug #8195: Encoding problems with $TYPO3_CONF_VARS[SYS][sitename] - leaving the actual fix commented out as the problem should be fixed on the client side
+
 2008-09-24  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug: Using list query with SQL LIKE wildcards does not work
